@@ -1,3 +1,9 @@
+2002-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* buildscripts/mf-to-table.py: Add EncodingScheme.
+
+	* scm/sketch.scm: Resurrect.
+
 2002-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/multi-measure-rest.cc: use breve rests for measure lengths
